welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if(vacation==True){
		if (weekday!=true){
	  return true ;
	} 
	  return true;
	} 
}
